[metadata]
name = lag
version = 0.0.3
url = https://github.com/thorwhalen/lag
platforms = any
description_file = README.md
description = Performance gauging tools
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
packages = find:
include_package_data = True
zip_safe = False

